# MBU_Egenbefordring

./: .gitignore  pyproject.toml
robot_framework/: config.py  exceptions.py  finalize.py  initialize.py  process.py  queue_framework.py
robot_framework/subprocesses/: get_os2form_receipt.py  helper_functions.py  notify.py  outlay_ticket_creation.py
